--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Echo App",
   "main": "app.js",
   "scripts": {
-    "test": "mocha --timeout 10000 --exit"
+    "test": "mocha --timeout 10000 --exit",
+    "start": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,9 @@
     "chai-http": "^4.2.0",
     "mocha": "^10.2.0",
     "sinon": "^7.2.2"
+  },
+  "dependencies": {
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2"
   }
 }
